--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
